feat(client): 거래 내역 조회 API 연동