@@ -3,8 +3,8 @@ package com.everbit.everbit.trade.dto;
 import com.everbit.everbit.trade.entity.Trade;
 
 import java.math.BigDecimal;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.databind.PropertyNamingStrategies;
 import com.fasterxml.jackson.databind.annotation.JsonNaming;
@@ -15,34 +15,34 @@ import lombok.Builder;
 @JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class)
 public record TradeResponse(
     String tradeId,
-    String market,
-    String type,
     String orderId,
+    String market,
+    String strategy,
+    String type,
     BigDecimal price,
     BigDecimal amount,
     BigDecimal totalPrice,
     String status,
-    String signalType,
-    String updatedAt
+    LocalDateTime updatedAt
 ) {
     public static TradeResponse from(Trade trade) {
         return TradeResponse.builder()
             .tradeId(trade.getId())
-            .market(trade.getMarket().getCode())
-            .type(trade.getType().getDescription())
             .orderId(trade.getOrderId())
+            .market(trade.getMarket().name())
+            .strategy(trade.getStrategy().name())
+            .type(trade.getType().getDescription())
             .price(trade.getPrice())
             .amount(trade.getAmount())
             .totalPrice(trade.getTotalPrice())
             .status(trade.getStatus().getDescription())
-            .signalType(trade.getSignalType().getDescription())
-            .updatedAt(trade.getUpdatedAt().toString())
+            .updatedAt(trade.getUpdatedAt())
             .build();
     }
 
     public static List<TradeResponse> from(List<Trade> trades) {
         return trades.stream()
             .map(TradeResponse::from)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
